include/vesc_can_sdk.h


#define VESC_DEBUG_NONE        0
#define VESC_DEBUG_BASIC       1
#define VESC_DEBUG_DETAILED    2
#define VESC_DEBUG_VERBOSE     3
#define VESC_DEBUG_CAN         0x0001  
#define VESC_DEBUG_COMMANDS    0x0002  
#define VESC_DEBUG_RESPONSES   0x0004  
#define VESC_DEBUG_BUFFERS     0x0008  
#define VESC_DEBUG_ERRORS      0x0010  
#define VESC_DEBUG_PERFORMANCE 0x0020  
#define VESC_DEBUG_ALL         0x003F  
typedef struct {
    uint8_t level;                    
    uint16_t categories;              
    vesc_debug_output_func_t output_func; 
    bool enable_timestamps;           
    bool enable_statistics;           
} vesc_debug_config_t;
typedef struct {
    uint32_t can_tx_count;           
    uint32_t can_rx_count;           
    uint32_t command_count;          
    uint32_t response_count;         
    uint32_t error_count;            
    uint32_t crc_error_count;        
    uint32_t buffer_overflow_count;  
    uint64_t total_tx_bytes;         
    uint64_t total_rx_bytes;         
} vesc_debug_stats_t;
#define COMM_FW_VERSION            0
#define COMM_GET_VALUES            4
#define COMM_REBOOT                29
#define COMM_DETECT_MOTOR_R_L      25
#define COMM_DETECT_MOTOR_FLUX_LINKAGE 27
#define COMM_GET_DECODED_ADC       32
#define COMM_GET_DECODED_PPM       31
#define COMM_GET_DECODED_CHUK      33
typedef struct {
    float temp_fet;           
    float temp_motor;         
    float current_motor;      
    float current_in;         
    float current_id;         
    float current_iq;         
    float duty_cycle;         
    float rpm;                
    float v_in;               
    float amp_hours;          
    float amp_hours_charged;  
    float watt_hours;         
    float watt_hours_charged; 
    int32_t tachometer;       
    int32_t tachometer_abs;   
    uint8_t fault_code;       
    float pid_pos;            
    uint8_t controller_id;    
    float temp_mos1;          
    float temp_mos2;          
    float temp_mos3;          
    float vd;                 
    float vq;                 
    uint8_t status;           
} vesc_values_t;
typedef struct {
    float resistance;         
    float inductance;         
    float ld_lq_diff;         
    bool valid;               
} vesc_motor_rl_response_t;
typedef struct {
    float cycle_int_limit;    
    float coupling_k;         
    int8_t hall_table[8];     
    int hall_res;             
    bool valid;               
} vesc_motor_param_response_t;
typedef struct {
    float flux_linkage;       
    bool valid;               
} vesc_flux_linkage_response_t;
typedef struct {
    float adc1;               
    float adc2;               
    float adc3;               
    float v_in;               
    bool valid;               
} vesc_adc_values_t;
typedef struct {
    float ppm;                
    float pulse_len;          
    bool valid;               
} vesc_ppm_values_t;
typedef struct {
    float js_y;               
    bool valid;               
} vesc_chuck_values_t;
typedef struct {
    uint8_t major;            
    uint8_t minor;            
    char hw_name[32];         
    uint8_t uuid[12];         
    bool pairing_done;        
    uint8_t test_version;     
    uint8_t hw_type;          
    uint8_t cfg_num;          
    bool valid;               
} vesc_fw_version_t;
typedef struct {
    uint8_t js_x;             
    uint8_t js_y;             
    uint8_t bt_c;             
    uint8_t bt_z;             
    int16_t acc_x;            
    int16_t acc_y;            
    int16_t acc_z;            
    bool rev_has_state;       
    bool is_rev;              
} vesc_chuck_data_t;
typedef struct {
    uint8_t controller_id;    
    float rpm;                
    float current;            
    float duty;               
    bool valid;               
} vesc_status_msg_1_t;
typedef struct {
    uint8_t controller_id;    
    float amp_hours;          
    float amp_hours_charged;  
    bool valid;               
} vesc_status_msg_2_t;
typedef struct {
    uint8_t controller_id;    
    float watt_hours;         
    float watt_hours_charged; 
    bool valid;               
} vesc_status_msg_3_t;
typedef struct {
    uint8_t controller_id;    
    float temp_fet;           
    float temp_motor;         
    float current_in;         
    float pid_pos_now;        
    bool valid;               
} vesc_status_msg_4_t;
typedef struct {
    uint8_t controller_id;    
    int32_t tacho_value;      
    float v_in;               
    bool valid;               
} vesc_status_msg_5_t;
typedef struct {
    uint8_t controller_id;    
    float adc_1;              
    float adc_2;              
    float adc_3;              
    float ppm;                
    bool valid;               
} vesc_status_msg_6_t;
typedef struct {
    uint8_t controller_id;    
    bool valid;               
} vesc_pong_response_t;
typedef bool (*vesc_can_send_func_t)(uint32_t id, uint8_t *data, uint8_t len);
typedef void (*vesc_response_callback_t)(uint8_t controller_id, uint8_t command, uint8_t *data, uint8_t len);
bool vesc_can_init(vesc_can_send_func_t can_send_func, uint8_t receiver_controller_id, uint8_t sender_id);
void vesc_set_response_callback(vesc_response_callback_t callback);
void vesc_process_can_frame(uint32_t id, uint8_t *data, uint8_t len);
void vesc_set_duty(uint8_t controller_id, float duty);
void vesc_set_current(uint8_t controller_id, float current);
void vesc_detect_motor_r_l(uint8_t controller_id);
void vesc_detect_motor_flux_linkage(uint8_t controller_id, float current, float min_rpm, float duty, float resistance);
void vesc_get_values(uint8_t controller_id);
void vesc_reboot(uint8_t controller_id);
void vesc_get_decoded_adc(uint8_t controller_id);
void vesc_get_decoded_ppm(uint8_t controller_id);
void vesc_get_decoded_chuck(uint8_t controller_id);
void vesc_set_chuck_data(uint8_t controller_id, const vesc_chuck_data_t *chuck_data);
void vesc_get_fw_version(uint8_t controller_id);
void vesc_ping(uint8_t controller_id);
bool vesc_parse_get_values(uint8_t *data, uint8_t len, vesc_values_t *values);
bool vesc_parse_motor_rl_response(uint8_t *data, uint8_t len, vesc_motor_rl_response_t *response);
bool vesc_parse_motor_param_response(uint8_t *data, uint8_t len, vesc_motor_param_response_t *response);
bool vesc_parse_flux_linkage_response(uint8_t *data, uint8_t len, vesc_flux_linkage_response_t *response);
bool vesc_parse_adc_values(uint8_t *data, uint8_t len, vesc_adc_values_t *values);
bool vesc_parse_ppm_values(uint8_t *data, uint8_t len, vesc_ppm_values_t *values);
bool vesc_parse_chuck_values(uint8_t *data, uint8_t len, vesc_chuck_values_t *values);
bool vesc_parse_fw_version(uint8_t *data, uint8_t len, vesc_fw_version_t *version);
bool vesc_parse_status_msg_1(uint8_t *data, uint8_t len, vesc_status_msg_1_t *status);
bool vesc_parse_status_msg_2(uint8_t *data, uint8_t len, vesc_status_msg_2_t *status);
bool vesc_parse_status_msg_3(uint8_t *data, uint8_t len, vesc_status_msg_3_t *status);
bool vesc_parse_status_msg_4(uint8_t *data, uint8_t len, vesc_status_msg_4_t *status);
bool vesc_parse_status_msg_5(uint8_t *data, uint8_t len, vesc_status_msg_5_t *status);
bool vesc_parse_status_msg_6(uint8_t *data, uint8_t len, vesc_status_msg_6_t *status);
bool vesc_parse_pong_response(uint8_t *data, uint8_t len, vesc_pong_response_t *pong);
bool vesc_debug_configure(vesc_debug_config_t *config);
bool vesc_debug_enable(uint8_t level, uint16_t categories);
void vesc_debug_disable(void);
bool vesc_debug_get_stats(vesc_debug_stats_t *stats);
bool vesc_debug_get_config(vesc_debug_config_t *config);
void vesc_debug_reset_stats(void);
void vesc_debug_print_stats(void);
void vesc_debug_print_buffer_state(void);